--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "cesium": "^1.119.0",
-    "mapbox-gl": "^3.5.1"
+    "mapbox-gl": "^3.5.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "nuxt": "^3.12.4"
