--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
     "cesium": "^1.119.0",
     "mapbox-gl": "^3.5.1",
     "vuex": "^4.1.0"
