--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-directions": "^4.3.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "cesium": "^1.119.0",
     "mapbox-gl": "^3.5.1",
     "vuex": "^4.1.0"
